feat(UI): Package Portlet Signed-off-by: akapti <abdul.kapti@siemens-healhtineers.com>
feat(REST): REST endpoints for Package portlet
Signed-off-by: afsahsyeda <afsah.syeda@siemens-healhtineers.com>